cmake_minimum_required( VERSION 3.21 )
project( ClassQuestions )

set( CMAKE_CXX_STANDARD 14 )

add_executable( ClassQuestions class_arrayofint.cpp )


add_executable(class_books class_books.cpp)
add_executable(class_arrayofint class_arrayofint.cpp Area_Friend.cpp vpropel.cpp single.cpp payment.cpp person.cpp attendance.cpp calculator.cpp mobile.cpp friend_inline.cpp class_Template.cpp template_shift.cpp Math_virtual.cpp book_shop.cpp overload.cpp "op overload.cpp" )
add_executable(Area_Friend Area_Friend.cpp CAT2/2ND.cpp )
add_executable(vpropel vpropel.cpp)
add_executable(single single.cpp)
add_executable(payment payment.cpp)
add_executable(person person.cpp)
add_executable(2ND CAT2/2ND.cpp PAT/pat4.cpp FAT/10.cpp )
add_executable(attendance attendance.cpp)
add_executable(calculator calculator.cpp)
add_executable(mobile mobile.cpp)
add_executable(inline friend_inline.cpp )
add_executable(friend_inline friend_inline.cpp)
add_executable(class_Template class_Template.cpp)
add_executable(template_shift template_shift.cpp)
add_executable(pat4 PAT/pat4.cpp)
add_executable(Math_Template Math_virtual.cpp )
add_executable(book_shop book_shop.cpp)
add_executable(overload overload.cpp)
add_executable(op overload "op overload.cpp")
add_executable(10 FAT/10.cpp)